--- a/style.scss
+++ b/style.scss
@@ -136,16 +136,32 @@ header {
 article {
   margin: 40px 130px;
   background-color: rgb(216, 212, 212);
+  height: 310px;
   .detail {
     padding: 10px 70px;
     display: flex;
     .text {
       padding: 40px;
-      width: 750px;
+      width: 785px;
+      letter-spacing: 1px;
+      h2 {
+        font-size: 40px;
+        width: 400px;
+      }
+      p {
+        padding: 20px 0;
+      }
+      a {
+        color: black;
+      }
     }
     .image {
+      width: 650px;
       img {
-        width: 550px;
+        width: 650px;
+        height: 300px;
+        position: absolute;
+        right: 150px;
       }
     }
   }
@@ -179,6 +195,14 @@ article {
         display: block;
         width: 625px;
       }
+    }
+  }
+  //article
+  article {
+    margin: 20px;
+    height: 560px;
+    .image {
+      margin-top: 250px;
     }
   }
 }
@@ -234,6 +258,7 @@ article {
       }
     }
   }
+  //main
   .main {
     .text {
       width: 450px;
@@ -245,6 +270,23 @@ article {
       .mobile {
         display: block;
         width: 450px;
+      }
+    }
+  }
+  //article
+  article {
+    height: 590px;
+    .detail {
+      width: 300px;
+
+      margin: 0 -70px;
+      .text {
+        padding: 50px;
+        width: 450px;
+      }
+      .image {
+        margin: 280px;
+        margin-left: 100px;
       }
     }
   }
