--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,10 @@
   margin: 0;
   padding: 0;
 }
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap");
+body {
+  font-family: "Cabin", sans-serif;
+}
 // header black
 header {
   background-color: rgb(216, 212, 212);
@@ -196,7 +200,7 @@ footer {
   background-color: black;
   color: white;
   .end {
-    margin: 40px 130px;
+    margin: 40px 130px 0;
     padding: 40px 0;
     display: flex;
     .brand {
@@ -204,6 +208,7 @@ footer {
       margin-right: 150px;
       p {
         padding: 10px 0;
+        color: rgb(165, 161, 154);
       }
     }
     .left {
